# text-adventure

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
adventures/: sample_kabukicho.json
docs/: action-dsl-reference.md
docs/adr/: 001-llm-provider.md  002-parser-design.md  003-game-data-format.md  004-state-management.md  005-cli-framework.md  006-custom-actions-architecture.md  007-curses-ui-and-ascii-art.md  README.md
src/text_adventure/: __init__.py  cli.py  config.py  validator.py
src/text_adventure/engine/: __init__.py  actions.py  engine.py
src/text_adventure/generator/: __init__.py  ascii_art.py  generator.py  prompts.py  schemas.py
src/text_adventure/llm/: __init__.py  anthropic.py  client.py
src/text_adventure/models/: __init__.py  command.py  game.py  state.py
src/text_adventure/observability/: __init__.py  telemetry.py
src/text_adventure/parser/: __init__.py  game_parser.py  lexer.py  parser.py  resolver.py
src/text_adventure/player/: __init__.py  ai_player.py
src/text_adventure/ui/: __init__.py  curses_ui.py  plain.py
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py  sample_game.json
tests/integration/: __init__.py  test_ai_player.py  test_custom_actions.py  test_generator.py  test_llm_client.py
tests/unit/: __init__.py  test_custom_verbs.py  test_generator_transforms.py  test_models.py
tests/unit/engine/: test_engine.py
tests/unit/parser/: test_lexer.py  test_parser.py  test_resolver.py
